# fraud-detection-env

./: .gitignore  Dockerfile  README.md  baseline_inference.py  client.py  evaluate.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: Dockerfile  app.py  data_generator.py  environment.py  graders.py
