[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "fraud-detection-env"
version = "1.0.0"
description = "OpenEnv-compliant financial fraud detection RL environment"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["reinforcement-learning", "fraud-detection", "openenv", "llm-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "websockets>=12.0",
    "openai>=1.20.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[project.scripts]
fraud-env-server = "server.app:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["fraud_detection_env*", "server*"]

[tool.ruff]
line-length = 100
target-version = "py311"
